--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
 - Shared pointer instead of this horrible pointer management. Prioritize references over ptrs.
 - Get rid of "default" class constructors as much as possible.
 - Formatting
+- Compilation process for shaders (compilation in the program as well)
+- VALGRIND
