--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,11 @@
+- Add 2 binding sets (one for camera/projection data, one for per-object position): https://developer.nvidia.com/vulkan-shader-resource-binding. This image is closest to what I'm looking for: https://d29g4g2dyqv443.cloudfront.net/sites/default/files/akamai/gameworks/blog/Vulkan_Shader_Resource/vulkan_resbinding_effective.png
+
+
+- Make binding set system more generic
+- Revise pipeline system (I think it should be more shader/object -centric??)
+- Frames in flight
+
 - Shared pointer instead of this horrible pointer management. Prioritize references over ptrs.
 - Get rid of "default" class constructors as much as possible.
 - Formatting
-- Compilation process for shaders (compilation in the program as well)
 - VALGRIND
